hphp/hack/test/typecheck/reactive/rx_unresolved_byval_collection2.php.like_types.exp
File "rx_unresolved_byval_collection2.php", line 13, characters 10-16:
Invalid return type (Typing[4110])
File "rx_unresolved_byval_collection2.php", line 6, characters 4-13:
Expected ~keyset<Tv> because it is an unenforceable type
File "rx_unresolved_byval_collection2.php", line 7, characters 13-20:
But got keyset<dynamic>
